# rotcev

./: .travis.yml  LICENSE  README.md  changelog.md  rotcev.cabal  vector-rotcev.cabal
.github/workflows/: haskell-ci.yml
src/Data/Vector/: Rotcev.hs
test/: Main.hs
