name: vector-rotcev
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2019 Andrew Lelechenko
maintainer: Andrew Lelechenko <andrew.lelechenko@gmail.com>
homepage: https://github.com/Bodigrim/rotcev
category: Data, Data Structures
synopsis: Vectors with O(1) reverse

library
  exposed-modules:
    Data.Vector.Rotcev
  build-depends:
    base >= 4.7 && < 5,
    vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite rotcev-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    base >=4.8 && <5,
    vector-rotcev,
    vector >=0.11,
    tasty,
    tasty-quickcheck
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts
  include-dirs: test
